--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,28 @@
-*{
+* {
+  font-family: "Lexend", sans-serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-.options{
+.title {
+  text-align: center;
+  margin: 20px 0px;
+}
+.options {
   display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+.option {
+  border: 1px solid black;
+  border-radius: 12px;
+  width: 190px;
+}
+.option .emoji {
+  font-size: 150px;
+  text-align: center;
+
+}
+.option p {
+  text-align: center;
 }
