--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  color: #39393a;
+}
+
+body {
+  background-color: #e6e6e6;
 }
 .title {
   text-align: center;
@@ -18,11 +23,16 @@
   border-radius: 12px;
   width: 190px;
 }
+.option:hover {
+  background-color: #f3a712;
+}
 .option .emoji {
   font-size: 150px;
   text-align: center;
-
 }
 .option p {
   text-align: center;
+}
+a {
+  text-decoration: none;
 }
