Delete inline js code
Add defer to script tag in html file
Change bad practices in js code

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ a {
   text-decoration: none;
 }
 body {
-  background-color: #e6e6e6;
+  /* background-color: #e6e6e6; */
+  background-color: #505050;
 }
 .title {
   text-align: center;
