--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,7 @@ a {
   text-decoration: none;
 }
 body {
-  /* background-color: #e6e6e6; */
-  background-color: #505050;
+  background-color: #e6e6e6;
 }
 .title {
   text-align: center;
